--- a/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
+++ b/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
@@ -8,6 +8,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Content Include="Reports\Gym\GymSalesInvoice.rdlc" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<Content Update="appsettings.Development.json">
 			<CopyToPublishDirectory>Never</CopyToPublishDirectory>
 			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
