--- a/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
+++ b/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
@@ -51,4 +51,8 @@
 		<Folder Include="wwwroot\js\login\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Include="wwwroot\js\coditech\inventory\InventoryStorageDimensionGroup.js" />
+	</ItemGroup>
+
 </Project>
