--- a/Coditech.Project/API/Coditech.Engine.User/appsettings.json
+++ b/Coditech.Project/API/Coditech.Engine.User/appsettings.json
@@ -18,7 +18,8 @@
     "CoditechApiUriItemSeparator": ",",
     "CoditechCommaReplacer": "^",
     "CoditechApiUriKeyValueSeparator": "~",
-    "EnableFileLogging": "0"
+    "EnableFileLogging": "0",
+    "ResetPasswordExpriedTimeInMinute": "5"
   },
   "AllowedHosts": "*"
 }
