--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -36,7 +36,7 @@
     "AuthenticationCookieExpireTimeSpan": "10",
     "AuthenticationSlidingExpiration": "true",
     "NotificationMessagesIsFadeOut": "true",
-    "ApplicationLogoPath": "https://localhost:7103/Data/ApplicationImages/ApplicationLogo.png",
+    "ApplicationLogoPath": "/Data/ApplicationImages/ApplicationLogo.png",
     "ApplicationTitle": "Admin Application",
     "ApplicationLogoBackground": "#ffffff",
     "ApplicationLayoutBackground": "../assets/images/auth-bg.png"
