--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -35,7 +35,9 @@
     "ApplicationLogoPath": "/Data/ApplicationImages/ApplicationLogo.png",
     "ApplicationTitle": "Admin Application",
     "ApplicationLogoBackground": "#ffffff",
-    "ApplicationLayoutBackground": "../assets/images/auth-bg.png"
+    "ApplicationLayoutBackground": "../assets/images/auth-bg.png",
+    "IsDefaultTheme": "1",
+    "ThemeColor": "red"
   },
   "AllowedHosts": "*"
 }
