--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -36,7 +36,7 @@
     "ApplicationTitle": "Admin Application",
     "ApplicationLogoBackground": "#ffffff",
     "ApplicationLayoutBackground": "../assets/images/auth-bg.png",
-    "IsDefaultTheme": "1",
+    "IsDefaultTheme": "true",
     "ThemeColor": "red"
   },
   "AllowedHosts": "*"
