--- a/Coditech.Project/API/Coditech.Engine.Gazette/web.config
+++ b/Coditech.Project/API/Coditech.Engine.Gazette/web.config
@@ -5,7 +5,7 @@
 			<handlers>
 				<add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
 			</handlers>
-			<aspNetCore processPath="dotnet" arguments=".\Coditech.Engine.GymManagementSystem.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+			<aspNetCore processPath="dotnet" arguments=".\Coditech.Engine.Gazette.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
 		</system.webServer>
 	</location>
 	<system.webServer>
