--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.Development.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.Development.json
@@ -11,6 +11,7 @@
     "CoditechGymManagementSystemApiRootUri": "https://localhost:7147",
     "CoditechInventoryApiRootUri": "https://localhost:7203",
     "CoditechMediaManagerApiRootUri": "https://localhost:7103",
-    "CoditechHospitalManagementSystemApiRootUri": "https://localhost:7174"
+    "CoditechHospitalManagementSystemApiRootUri": "https://localhost:7174",
+    "CoditechGazetteApiRootUri": "https://localhost:7046"
   }
 }
