--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@
 /Coditech.Project/API/Coditech.Engine.Gazette/bin
 /Coditech.Project/API/Coditech.Engine.Gazette/obj
 /Coditech.Project/API/Coditech.Engine.Gazette/Coditech.Engine.Gazette.csproj.user
+/Coditech.Project/API/Coditech.Engine.MediaManager/Data/Media
