--- a/Coditech.Project/API/Coditech.Engine.Employee/appsettings.json
+++ b/Coditech.Project/API/Coditech.Engine.Employee/appsettings.json
@@ -10,8 +10,8 @@
   },
   "appsettings": {
     "ValidateRequestAPI": "false",
-    "CoditechApiDomainName": "",
-    "CoditechApiDomainKey": "",
+    "CoditechApiDomainName": "coditech.co.in",
+    "CoditechApiDomainKey": "8a8b4931-7d57-42e8-a005-b1c0cce49f1d",
     //To specify Coditech API request timeout in milliseconds
     "ApiRequestTimeout": "10000000",
     "MinifiedJsonResponseFromAPI": "false",
