--- a/Coditech.Project/API/Coditech.Engine.Organisation/appsettings.json
+++ b/Coditech.Project/API/Coditech.Engine.Organisation/appsettings.json
@@ -10,15 +10,16 @@
   },
   "appsettings": {
     "ValidateRequestAPI": "false",
-    "CoditechApiDomainName": "",
-    "CoditechApiDomainKey": "",
+    "CoditechApiDomainName": "coditech.co.in",
+    "CoditechApiDomainKey": "8a8b4931-7d57-42e8-a005-b1c0cce49f1d",
     //To specify API request timeout in milliseconds
     "ApiRequestTimeout": "10000000",
     "MinifiedJsonResponseFromAPI": "false",
     "CoditechApiUriItemSeparator": ",",
     "CoditechCommaReplacer": "^",
     "CoditechApiUriKeyValueSeparator": "~",
-    "EnableFileLogging": "0"
+    "EnableFileLogging": "0",
+    "ApiDomainRequestKey": "954FA6B4-132F-439E-BEA9-48730D3442B0"
   },
   "AllowedHosts": "*"
 }
