--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -37,7 +37,8 @@
     "ApplicationLogoBackground": "#ffffff",
     "ApplicationLayoutBackground": "../assets/images/auth-bg.png",
     "IsDefaultTheme": "true",
-    "ThemeColor": "red"
+    "ThemeColor": "red",
+    "DefaultDashboardDataDays": "30"
   },
   "AllowedHosts": "*"
 }
