--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -39,7 +39,7 @@
     "IsDefaultTheme": "true",
     "ThemeColor": "red",
     "DefaultDashboardDataDays": "30",
-    "MaintenanceMode": "true"
+    "MaintenanceMode": "false"
   },
   "AllowedHosts": "*"
 }
