--- a/Coditech.Project/API/Coditech.Engine.Organisation/appsettings.json
+++ b/Coditech.Project/API/Coditech.Engine.Organisation/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
   "ConnectionStrings": {
-    "CoditechDatabase": "Server=108.181.194.83;Database=CoditechStageDB;User Id=sa;Password=myfirstvps#01; TrustServerCertificate=True",
-    "HangfireConnection": "Server=108.181.194.83;Database=HangfireStageDB;User Id=sa;Password=myfirstvps#01;TrustServerCertificate=True"
+    "CoditechDatabase": "Server=108.181.194.83;Database=CoditechDevelopmentDB;User Id=sa;Password=myfirstvps#01; TrustServerCertificate=True",
+    "HangfireConnection": "Server=108.181.194.83;Database=HangfireDevelopmentDB;User Id=sa;Password=myfirstvps#01;TrustServerCertificate=True"
   },
   "appsettings": {
-    "ValidateRequestAPI": "true",
+    "ValidateRequestAPI": "false",
     "CoditechApiDomainName": "coditech.co.in",
     "CoditechApiDomainKey": "8a8b4931-7d57-42e8-a005-b1c0cce49f1d",
     //To specify API request timeout in milliseconds
