--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -14,7 +14,7 @@
     "DeletionInterval": "5"
   },
   "ConnectionStrings": {
-    "CoditechDatabase": "Server=108.181.194.83;Database=CoditechStageDB;User Id=sa;Password=myfirstvps#01; TrustServerCertificate=True"
+    "CoditechDatabase": "Server=108.181.194.83;Database=CoditechDevelopmentDB;User Id=sa;Password=myfirstvps#01; TrustServerCertificate=True"
   },
   "appsettings": {
     "CoditechApiUriItemSeparator": ",",
@@ -23,7 +23,7 @@
     "Scheme": "http://",
     "ApiDomainName": "coditech.co.in",
     "ClientName": "coditech",
-    "EnvironmentName": "stage",
+    "EnvironmentName": "dev",
     "ApiDomainKey": "8a8b4931-7d57-42e8-a005-b1c0cce49f1d",
     //Cookie setting.
     "CookieExpiresValue": "2",
@@ -36,7 +36,7 @@
     "NotificationMessagesIsFadeOut": "true",
     "ApplicationLogoPath": "/Data/ApplicationImages/ApplicationLogo.png",
     "ApplicationLogoSmallPath": "/Data/ApplicationImages/ApplicationSmallLogo.png",
-    "ApplicationLogoBackground": "#ffffff",
+    "ApplicationTitle": "Admin Application",
     "ApplicationLayoutBackground": "../assets/images/auth-bg.png",
     "IsDefaultTheme": "true",
     "ThemeColor": "brown.css",
